Fix blurry text bug.

--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -156,9 +156,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-72px, -200px);
     text-align: center;
-    backface-visibility: hidden;
 }
 
 .price-duration {
